--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "com.saye.contracts",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "displayName": "Contracts",
   "description": "Facilitates composition of arbitrary conditions into contracts that can be fulfilled or breached.",
   "unity": "2019.4",
-  "keywords": ["contract", "condition", "obligation", "violation"],
+  "keywords": ["contract", "condition", "career", "progression", "watchable", "observable"],
   "license": "UNLICENSED",
 	"author": {
 		"name": "Alex Saye"
