chore: remove my name from the namespace

--- a/Runtime/Contracts.asmdef
+++ b/Runtime/Contracts.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Contracts",
-    "rootNamespace": "Saye.Contracts",
+    "rootNamespace": "Contracts",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
